add Order By  sur chaque colonne / Fix RollBack en cas d'echec sur la suppression d'un Company

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Un super titre</title>
+<title></title>
+	<meta http-equiv="refresh" content="0; URL=dashboard" />
 </head>
 <body>
-	<h1>ENFIN ?</h1>
+	
 
 </body>
 </html>
